@@ -27,7 +27,7 @@ screamshotter = git https://github.com/makinacorpus/django-screamshot.git branch
 convertit = git https://github.com/makinacorpus/convertit.git rev=0b537dee184da67e7cd5d07d48f8b65968684ad2
 paperclip = git https://github.com/makinacorpus/django-paperclip.git
 # Still under development
-mapentity = git https://github.com/makinacorpus/Geotrek.git rev=d85761ac3d82c0545300b35e7e0110f81c17a1bc
+mapentity = git https://github.com/makinacorpus/Geotrek.git rev=1741224ff448fe9e3d4d11c19db1bb374a89a3eb
 
 [gdal-bindings]
 recipe = zc.recipe.egg:custom
