@@ -6,6 +6,7 @@ CHANGELOG
 -------------------
 
 * Fix install.sh help not being shown
+* Fix screenshots being empty if deployed behind reverse proxy with rool url (fixes #687)
 
 0.22.2 (2014-02-14)
 -------------------
